--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "webpack": "^5.52.1",
     "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^4.2.1"
+  },
+  "dependencies": {
+    "midi-writer-js": "^3.1.1"
   }
 }
