--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start": "webpack serve --mode development",
     "build": "webpack --mode production",
-    "test": "jest"
+    "build:gh-pages": "webpack --mode production --env production",
+    "test": "jest",
+    "preview": "npx http-server . -p 8080 -o"
   },
   "keywords": [
     "music",
@@ -16,6 +18,7 @@
   ],
   "devDependencies": {
     "@types/jest": "^27.0.1",
+    "http-server": "^14.1.1",
     "jest": "^27.2.0",
     "ts-jest": "^27.0.5",
     "ts-loader": "^9.2.5",
