--- a/package.json
+++ b/package.json
@@ -29,8 +29,9 @@
     "webpack-dev-server": "^4.2.1"
   },
   "dependencies": {
-    "@langchain/openai": "^0.0.14",
-    "langchain": "^0.0.212",
+    "@langchain/core": "^0.3.71",
+    "@langchain/google-genai": "^0.2.16",
+    "@langchain/openai": "^0.6.8",
     "midi-writer-js": "^3.1.1"
   }
 }
